[gd_scene load_steps=5 format=3 uid="uid://chonhgqhxgjxr"]

[ext_resource type="PackedScene" path="res://physics/atmosphere/atmosphere.tscn" id="1"]
[ext_resource type="Script" path="res://physics/camera_ctrl/player_camera.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bb1dm6cctyewt" path="res://physics/camera_ctrl/broad_tree_visualization.tscn" id="3"]

[sub_resource type="SphereMesh" id="3"]
flip_faces = true
radial_segments = 16
rings = 8

[node name="PlayerCamera" type="RefFrameNode"]
script = ExtResource("2")

[node name="BroadTreeVisualization" parent="." instance=ExtResource("3")]

[node name="Atmosphere" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
visible = false
cast_shadow = 0
skeleton = NodePath("")

[node name="BackgroundSky" type="MeshInstance3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
visible = false
cast_shadow = 0
mesh = SubResource("3")
skeleton = NodePath("")
